--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@airs-ui/react": "^2.1.0",
+    "@airs-ui/react": "^2.2.0",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
