--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/cookie": "^0.5.1",
     "prisma": "^4.14.1"
   }
 }
