--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.8",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
+    "googleapis": "^118.0.0",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
     "nookies": "^2.5.2",
