--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "googleapis": "^118.0.0",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
+    "next-seo": "^6.0.0",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
