--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "postinstall": "prisma generate"
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@airs-ui/react": "^2.2.0",
